Nuova api per ottenere lista documenti caricati dall'utente
